<?xml version="1.0"?>
<?model-info version="1.0"?>
<package format="3">
  <name>octomap_ros2_humble</name>
  <version>0.1.0</version>
  <description>Standalone port of OctoMap for ROS 2 Humble</description>
  <maintainer email="taeraemon.bot@gmail.com">taeraemon-bot</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
